--- a/Burger and Frights.html
+++ b/Burger and Frights.html
@@ -924,41 +924,46 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Bad Parenting.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
-      </div>
-      <div class="card-title">Bad Parenting</div>
-    </a><a href="Crank It!.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crank It!/thumbnail.jpg')">
-        <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!" loading="lazy">
-      </div>
-      <div class="card-title">Crank It!</div>
-    </a><a href="FNAF 4.html" class="game-card">
+      <a href="FNAF 4.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
         <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
       </div>
       <div class="card-title">FNAF 4</div>
-    </a><a href="FNAF 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 2</div>
     </a><a href="FNAF 1.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
         <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
       </div>
       <div class="card-title">FNAF 1</div>
-    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
+    </a><a href="Hungry Lamu.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
+        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
       </div>
-      <div class="card-title">FNAF Pizzeria Simulator</div>
+      <div class="card-title">Hungry Lamu</div>
+    </a><a href="Crank It!.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crank It!/thumbnail.jpg')">
+        <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!" loading="lazy">
+      </div>
+      <div class="card-title">Crank It!</div>
+    </a><a href="FNAF 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 2</div>
     </a><a href="Granny.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
         <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
       </div>
       <div class="card-title">Granny</div>
+    </a><a href="Bad Parenting.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
+        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
+      </div>
+      <div class="card-title">Bad Parenting</div>
+    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
+      </div>
+      <div class="card-title">FNAF Pizzeria Simulator</div>
     </a><a href="FNAF Sister Location.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
         <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location" loading="lazy">
@@ -969,136 +974,131 @@ footer a:hover {
         <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
       </div>
       <div class="card-title">FNAF 3</div>
-    </a><a href="Hungry Lamu.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
-        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
+    </a><a href="Henry Stickmin Stealing The Diamond.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Stealing The Diamond/thumbnail.jpg" alt="Henry Stickmin Stealing The Diamond" loading="lazy">
       </div>
-      <div class="card-title">Hungry Lamu</div>
-    </a><a href="Age Of War.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
-        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
-      </div>
-      <div class="card-title">Age Of War</div>
-    </a><a href="Bob The Robber .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber </div>
+      <div class="card-title">Henry Stickmin Stealing The Diamond</div>
     </a><a href="Bloodmoney 2.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
         <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
       </div>
       <div class="card-title">Bloodmoney 2</div>
-    </a><a href="Clear Vision 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
+    </a><a href="Elastic Face.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
+        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
       </div>
-      <div class="card-title">Clear Vision 2</div>
-    </a><a href="Block Blast.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
-        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
+      <div class="card-title">Elastic Face</div>
+    </a><a href="Deadly Descent.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deadly Descent/thumbnail.png')">
+        <img class="thumb" src="games/Deadly Descent/thumbnail.png" alt="Deadly Descent" loading="lazy">
       </div>
-      <div class="card-title">Block Blast</div>
-    </a><a href="Crazy Cattle 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
-        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
+      <div class="card-title">Deadly Descent</div>
+    </a><a href="Effing Worms.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
+        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
       </div>
-      <div class="card-title">Crazy Cattle 3D</div>
-    </a><a href="Slope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
-        <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope" loading="lazy">
+      <div class="card-title">Effing Worms</div>
+    </a><a href="Vapmpire Survivors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
       </div>
-      <div class="card-title">Slope</div>
+      <div class="card-title">Vapmpire Survivors</div>
     </a><a href="Happy Room.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
         <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room" loading="lazy">
       </div>
       <div class="card-title">Happy Room</div>
-    </a><a href="The Binding of Isaac - Wrath of the Lamb.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
-        <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb" loading="lazy">
+    </a><a href="Fruit Ninja.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
+        <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja" loading="lazy">
       </div>
-      <div class="card-title">The Binding of Isaac - Wrath of the Lamb</div>
+      <div class="card-title">Fruit Ninja</div>
+    </a><a href="Hover Race Drive.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
+        <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive" loading="lazy">
+      </div>
+      <div class="card-title">Hover Race Drive</div>
+    </a><a href="Going Balls.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
+        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
+      </div>
+      <div class="card-title">Going Balls</div>
+    </a><a href="Henry Stickmin Escaping The Prison.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Escaping The Prison</div>
+    </a><a href="Geometry Dash Lite.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
+        <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite" loading="lazy">
+      </div>
+      <div class="card-title">Geometry Dash Lite</div>
+    </a><a href="Drive Mad.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
+        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
+      </div>
+      <div class="card-title">Drive Mad</div>
+    </a><a href="Ink Game.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
+        <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
+      </div>
+      <div class="card-title">Ink Game</div>
+    </a><a href="Infinite Craft.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
+        <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
+      </div>
+      <div class="card-title">Infinite Craft</div>
     </a><a href="Doki Doki Literature Club.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
         <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club" loading="lazy">
       </div>
       <div class="card-title">Doki Doki Literature Club</div>
-    </a><a href="Bloxorz.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
-        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
+    </a><a href="Helix Jump.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
+        <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump" loading="lazy">
       </div>
-      <div class="card-title">Bloxorz</div>
-    </a><a href="Bit Planes.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
-        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
+      <div class="card-title">Helix Jump</div>
+    </a><a href="Earth Taken.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
+        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
       </div>
-      <div class="card-title">Bit Planes</div>
-    </a><a href="Bloodmoney .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
-      </div>
-      <div class="card-title">Bloodmoney </div>
+      <div class="card-title">Earth Taken</div>
     </a><a href="Douchebag Life.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Douchebag Life/thumbnail.jpg')">
         <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life" loading="lazy">
       </div>
       <div class="card-title">Douchebag Life</div>
-    </a><a href="Hanger 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2" loading="lazy">
+    </a><a href="Bloodmoney .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
+        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
       </div>
-      <div class="card-title">Hanger 2</div>
-    </a><a href="Crazy Motorcycle.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
+      <div class="card-title">Bloodmoney </div>
+    </a><a href="CS Go Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/CS Go Clicker/thumbnail.png')">
+        <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker" loading="lazy">
       </div>
-      <div class="card-title">Crazy Motorcycle</div>
-    </a><a href="Idle Breakout.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Idle Breakout/thumbnail.png')">
-        <img class="thumb" src="games/Idle Breakout/thumbnail.png" alt="Idle Breakout" loading="lazy">
+      <div class="card-title">CS Go Clicker</div>
+    </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
+        <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
       </div>
-      <div class="card-title">Idle Breakout</div>
-    </a><a href="Dreader.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
-        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      <div class="card-title">Burrito Bison Launcha Libre</div>
+    </a><a href="Escape Road .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
+        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
       </div>
-      <div class="card-title">Dreader</div>
-    </a><a href="Fireboy and Watergirl 1.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
-        <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1" loading="lazy">
+      <div class="card-title">Escape Road </div>
+    </a><a href="Drift Boss.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
+        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
       </div>
-      <div class="card-title">Fireboy and Watergirl 1</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      <div class="card-title">Drift Boss</div>
+    </a><a href="Clear Vision 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 3/thumbnail.png')">
+        <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 2</div>
-    </a><a href="Blaze Drifter.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
-        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
-      </div>
-      <div class="card-title">Blaze Drifter</div>
-    </a><a href="Clear Vision 4.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 4/thumbnail.jpg')">
-        <img class="thumb" src="games/Clear Vision 4/thumbnail.jpg" alt="Clear Vision 4" loading="lazy">
-      </div>
-      <div class="card-title">Clear Vision 4</div>
-    </a><a href="Gun Spin.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
-        <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
-      </div>
-      <div class="card-title">Gun Spin</div>
-    </a><a href="1v1.lol.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
-        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
-      </div>
-      <div class="card-title">1v1.lol</div>
-    </a><a href="Bad Time Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
-      </div>
-      <div class="card-title">Bad Time Simulator</div>
+      <div class="card-title">Clear Vision 3</div>
     </a>
     </div>
   </div>
